# summer_practic_task2

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: main.c
cmake/: MyFunction.cmake
include/: hex_dumper.h
lib/: CMakeLists.txt
lib/include/: hex_dumper.h
lib/src/: hex_dumper.c
src/: hex_dumper.c
